<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sistema ANSP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="title_activity_rack_display">Rack Display</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="initialize">Initialize DB</string>
    <string name="table_column_rackid">Rack ID</string>
    <string name="table_column_id">ID</string>
    <string name="table_column_pos">Position</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="clear">Clear</string>
    <string name="table_column_apelido">Nickname</string>
    <string name="help_text">Start by pressing the name of the field you wish to read the barcode</string>
    <string name="position">Position</string>
    <string name="equipment">Equipment</string>
    <string name="help_text1">Start tapping the barcode icon above to scan the rack</string>

</resources>
