<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ansp.sistema.RackDisplayActivity$PlaceholderFragment" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/rack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rack_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/rack_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/help_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/posicao_texto"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="scanEquipamento"
            android:text="@string/position" />

        <EditText
            android:id="@+id/posicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minHeight="35dp"
            android:minWidth="60dp" />

        <ImageView
            android:id="@+id/check"
            android:contentDescription="Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="10dp"
            android:maxWidth="10dp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/equipamento_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="scanEquipamento"
            android:text="@string/equipment" />

        <EditText
            android:id="@+id/equipamento_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minWidth="60dp" />

        <TextView
            android:id="@+id/equipamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageButton
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@null"
            android:contentDescription="@string/clear"
            android:onClick="clear"
            android:src="@drawable/ic_button_clear" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/save"
            android:onClick="save"
            android:src="@drawable/ic_button_save" />

    </LinearLayout>

</LinearLayout>
